# bitcoin_handshake

./: .gitignore  Cargo.toml  Readme.md
bitcoin_node/: Cargo.toml
bitcoin_node/src/: cli.rs  main.rs
bth_message/: Cargo.toml
bth_message/src/: lib.rs  message.rs  network_address.rs  serialization.rs  services.rs  variable_length.rs  version.rs
bth_network/: Cargo.toml
bth_network/src/: codec.rs  lib.rs  network.rs
