[package]
name = "bitcoin_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
clap = { version = "4.4", features = ["derive", "cargo"] }
log = "0.4.22"
env_logger = "0.11.5"

bth_message = { path = "../bth_message" }
bth_network = { path = "../bth_network" }


